--- a/www/styles_MIDN_pages.css
+++ b/www/styles_MIDN_pages.css
@@ -234,6 +234,7 @@ table td{
   padding: 0;
   margin-top: 3px;
   margin-bottom: 14px;
+  font-size: 10px;
 /*  margin-right: 4px;
   margin-left: 4px; */
   @bottom-left{
