--- a/www/styles_MIDN_pages.css
+++ b/www/styles_MIDN_pages.css
@@ -190,6 +190,10 @@ table th tr td .quads{
   font-size:9px;
 }
 
+.lighttable-minimal thead tr:last-child th{
+  border-bottom: 1px solid black;
+}
+
 table th {
   border: 1px solid black;
   border-bottom: 1px solid black;
